# docopt2

./: LICENSE  README.md  pyproject.toml
docs/: ROADMAP.md  SPEC.md
src/docopt2/: __init__.py  engine.py  exceptions.py  lexer.py  nodes.py  parser.py  tokens.py
tests/: test_engine.py  test_lexer.py  test_parser.py  test_smoke.py
