[project]
name = "docopt2"
dynamic = ["version"]
description = "A modern, decoupled implementation of the docopt DSL."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cli", "parser", "docopt", "ast", "type-safe"]
authors = [
  { name = "dev4dojo" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dev4dojo/docopt2#README"
Issues = "https://github.com/dev4dojo/docopt2/issues"
Source = "https://github.com/dev4dojo/docopt2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docopt2"]

[tool.hatch.version]
path = "src/docopt2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/docopt2}"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-coverage",
  "ruff",
]

[tool.hatch.envs.test.scripts]
all = "pytest {args}"
cov = "coverage run -m pytest && coverage report --show-missing"

[tool.coverage.run]
source_pkgs = ["docopt2"]
branch = true
relative_files = true

[tool.coverage.paths]
docopt2 = ["src/docopt2"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = [
    "*/tests/*",
    "*/__about__.py",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "B", "I", "N"]
